fix(locator-page dma-tab): fix overflow on host list
fix an issue where the host list cannot be scrolled if the list exceeds the div height

NSB-3555

--- a/src/app/global/components_shared/locator_components/dma-tab/dma-tab.component.scss
+++ b/src/app/global/components_shared/locator_components/dma-tab/dma-tab.component.scss
@@ -44,6 +44,8 @@
 
 				.selected-dma-info {
 					background-color: white;
+					overflow-y: auto;
+					max-height: 85vh;
 
 					.total-hosts {
 						margin-left: auto;
